--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "koa": "^0.20.0",
     "koa-body": "^1.2.1",
     "koa-ejs": "^2.0.1",
-    "koa-mongo": "^0.3.1",
     "koa-router": "^4.3.2",
     "koa-session": "^3.1.0",
-    "koa-static": "^1.4.9"
+    "koa-static": "^1.4.9",
+    "mongodb": "^2.0.33"
   },
   "devDependencies": {},
   "scripts": {
